// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row creates a row with the correct number of cells 1`] = `
<tr
  className="worklist-data-grid-row"
  style={
    Object {
      "height": "25",
    }
  }
>
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "Heart Rate Monitored (bpm)",
      }
    }
    columnId="Column-0"
    columnIndex={0}
    isRowHeader={true}
    isSelected={false}
    isTabStop={false}
    key="1_Column-0"
    onCellSelect={[Function]}
    rowId="1"
    rowIndex={99}
  />
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "",
      }
    }
    columnId="Column-1"
    columnIndex={1}
    isRowHeader={false}
    isSelected={true}
    isTabStop={true}
    key="1_Column-1"
    onCellSelect={[Function]}
    rowId="1"
    rowIndex={99}
  />
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "66",
        "isMasked": true,
      }
    }
    columnId="Column-2"
    columnIndex={2}
    isRowHeader={false}
    isSelected={false}
    isTabStop={false}
    key="1_Column-2"
    onCellSelect={[Function]}
    rowId="1"
    rowIndex={99}
  />
</tr>
`;

exports[`Row verifies the cell is created with the right props 1`] = `
<tr
  className="worklist-data-grid-row"
  style={
    Object {
      "height": "25",
    }
  }
>
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "Cardiac Index (L/min/m2)",
      }
    }
    columnId="Column-0"
    columnIndex={0}
    isRowHeader={true}
    isSelected={false}
    isTabStop={false}
    key="3_Column-0"
    onCellSelect={[Function]}
    rowId="3"
    rowIndex={2}
  />
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "2.25",
      }
    }
    columnId="Column-1"
    columnIndex={1}
    isRowHeader={false}
    isSelected={false}
    isTabStop={false}
    key="3_Column-1"
    onCellSelect={[Function]}
    rowId="3"
    rowIndex={2}
  />
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "2.28",
        "isMasked": true,
      }
    }
    columnId="Column-2"
    columnIndex={2}
    isRowHeader={false}
    isSelected={false}
    isTabStop={false}
    key="3_Column-2"
    onCellSelect={[Function]}
    rowId="3"
    rowIndex={2}
  />
</tr>
`;
